# helldivers_2_voice_stratagems

./: .gitignore  README.md  build.cmd  hd2_stratagem_asr.yaml.default  pyproject.toml
source/: __main__.py  config.py  key_press.py  main.py  stratagems.py  tools.py
